--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello</h1>
+<!doctype html>
+<html>
+  <head>
+    <title>HTML is Structure Only (Before)</title>
+  </head>
+  <body>
+    <h1>HTML is Structure Only</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
+    <footer>
+      <hr>
+      <p>Tech Support: yeah.right@server-is-down.com</p>
+    </footer>
+  </body>
+</html>
